# firestarter_app

./: .gitignore  LICENSE  MANIFEST.in  README.md  autocomplete.md  communication_test.sh  firestarter_test.sh  pyproject.toml  requirements.txt  setup.cfg_  setup.py  setup.py_  test.py  test_commands.sh  test_runs.sh  things.md  write_test.sh
.github/scripts/: release.py  update_version.py
.github/workflows/: publish.yml  release.yml
doc/: package-details.md  protocol-flags.md  protocol-id.md
firestarter/: __init__.py  avr_tool.py  config.json  config.py  constants.py  database.py  dev_tools.py  eprom_info.py  eprom_operations.py  eprom_ops.py  firmware.py  hardware.py  ic_layout.py  logging_utils.py  main.py  serial_comm.py  utils.py
firestarter/data/: avrdude.conf  database.json  database_generated.json  database_overrides.json  pin-map.json  pin-maps.json
tools/: parse_db.py  parse_helper.py  pin-layouts.odt  verified.txt
