[build-system]
requires = ['setuptools>=45', "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[project]
authors = [
    { name = "Henrik Olsson", email = "henols@gmail.com" },
]
name = "firestarter"
description = "EPROM burner software for the Relatively Universal ROM Programmer"
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = ["version"]

dependencies = [
    "argparse",
    "pyserial",
    "requests"
]

[project.entry-points."console_scripts"]
firestarter="firestarter.main:main"

[tool.setuptools]
include-package-data = true
packages = [
    "firestarter",
]

[tool.setuptools.package-dir]
toolbox = "firestarter"

[tool.setuptools.package-data]
    "firestarter" = [
        "data/database.json",
        "data/pin-maps.json",
        "data/avrdude.conf",
        ]

[tool.setuptools.dynamic]
version = {attr = "firestarter.__version__"}
#readme = {file = "README.md", content-type = "text/markdown"}
