
[build-system]
requires = ['setuptools>=45', "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
authors = [
    { name = "Henrik Olsson", email = "henols@gmail.com" },
]
name = "firestarter"
description = "EPROM programmer software for the Relatively Universal ROM Programmer"
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = ["version"]
requires-python = ">=3.9"
keywords = ["eprom", "programmer", "arduino", "electronics", "retrocomputing"] # Example keywords
classifiers = [
    "Development Status :: 4 - Beta", # Or appropriate status
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware :: Hardware Drivers",
]

dependencies = [
    "pyserial>=3.5",
    "requests>=2.20",
    "tqdm>=4.60",
    "argcomplete>=3.6.2",
    "rich>=14.0"
]

urls = { "Homepage" = "https://github.com/henols/firestarter_app" }

[project.scripts]
firestarter="firestarter.main:main"

[tool.setuptools]
include-package-data = true
packages = [
    "firestarter",
]
[tool.setuptools.package-data]
    "firestarter" = [
        "data/database_generated.json",
        "data/database_overrides.json",
        "data/pin-maps.json",
        ]

[tool.setuptools.dynamic]
version = {attr = "firestarter.__version__"}
